# AirGuard-Dashboard-Project

./: .dockerignore  .env  .gitignore  README.md  docker-compose.yml  pyproject.toml  region_data.xlsx
backend/: Dockerfile  api_client.py  database.py  main.py  service.py
frontend/: Dockerfile  app.py
frontend/components/: map.py  ui.py
